# EulerFlow

./: README.md  pyproject.toml  setup.py
EulerFlow/: BoundaryConditions.py  DiffusionSol1D.py  DiffusionSol2D.py  EulerSol1D.py  EulerSolQuasi1D.py  JamesonShmidtTurkel.py  WaveEqn1D.py  __init__.py  taylorNeumannSedov.py
tests/: test_sedov1d.py
